fixed comments collapse

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -517,6 +517,12 @@ nav i {
   background-color: rgb(240, 240, 240);
 }
 
+.show-content {
+  margin-top: 20px;
+  background-color: rgb(240, 240, 240);
+  padding: 10px 10px 5px 20px;
+}
+
 
 
 
